Update handleMaximizeCounter and maximizeCounter to accept an argument that specifies the number to add to the count. Hint: Review what you did in step 1 to send a data-factor with the multiply custom event.

--- a/force-app/main/default/lwc/controls/controls.html
+++ b/force-app/main/default/lwc/controls/controls.html
@@ -15,6 +15,15 @@
                 </lightning-layout-item>
             </lightning-layout-item>
             <lightning-layout-item flexibility="auto" padding="around-small">
+                <!-- buttons go here -->
+                <lightning-layout-item flexibility="auto" padding="around-small" onbuttonclick={handleNumbersToAdd}>
+                    <template for:each={numbers} for:item="number">
+                        <c-button key={number} label={number} data-number={number} icon="utility:close">
+                        </c-button>
+                    </template>
+                </lightning-layout-item>
+            </lightning-layout-item>
+            <lightning-layout-item flexibility="auto" padding="around-small">
                 <lightning-button label="Add" icon-name="utility:add" onclick={handleAdd} icon-position="right">
                 </lightning-button>
             </lightning-layout-item>
