--- a/force-app/main/default/lwc/numerator/numerator.html
+++ b/force-app/main/default/lwc/numerator/numerator.html
@@ -6,8 +6,8 @@
         <p class="slds-text-align_center slds-var-m-vertical_medium">
             Count: <lightning-formatted-number value={counter}></lightning-formatted-number>
         </p>
-        <c-controls class="slds-show slds-is-relative" onmultiply={handleMultiply} onadd={handleIncrement}
-            onsubtract={handleDecrement} ondiv={handleDividedByTwo}>
+        <c-controls class="slds-show slds-is-relative" onmultiply={handleMultiply} onaddnumbers={handleAddNumbers}
+            onadd={handleIncrement} onsubtract={handleDecrement} ondiv={handleDividedByTwo}>
         </c-controls>
     </lightning-card>
 </template>
